--- a/hotel.css
+++ b/hotel.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background: url("bg-hotel.jpg");
+  background: url("images/bg-hotel.jpg");
   background-size: cover;
   height: auto;
   width: auto;
